--- a/ParkHere/app/src/main/res/layout/activity_main.xml
+++ b/ParkHere/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,34 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
-    <Button
-        android:id="@+id/Parking_list"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
-        android:onClick="parkingList"
-        android:text="Button Press" />
+        android:textSize="40dp"
+        android:text="Park Here" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/Parking_list"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="300dp"
+            android:onClick="parkingList"
+            android:text="Available Parking" />
+
+        <Button
+            android:id="@+id/Spot_Submission"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@+id/Parking_list"
+            android:layout_marginTop="300dp"
+            android:onClick="registerParking"
+            android:layout_marginLeft="10dp"
+            android:text="Submit a Spot" />
+    </LinearLayout>
 
 </RelativeLayout>
