--- a/ParkHere/app/src/main/res/layout/activity_main.xml
+++ b/ParkHere/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,16 @@
             android:text="Submit a Spot" />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+        <android.support.design.widget.FloatingActionButton
+            app:fabSize="normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 </RelativeLayout>
