search bar in main activity

--- a/ParkHere/app/src/main/res/layout/activity_navigation.xml
+++ b/ParkHere/app/src/main/res/layout/activity_navigation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.Controllers.Navigation"
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.Navigation"
     android:orientation="horizontal">
 
     <LinearLayout
