--- a/ParkHere/app/src/main/res/layout/activity_login.xml
+++ b/ParkHere/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.Controllers.LoginActivity"
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.LoginActivity"
     android:layout_centerInParent="true">
 
     <ImageView
