--- a/ParkHere/app/src/main/res/layout/activity_main.xml
+++ b/ParkHere/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.Controllers.MainActivity">
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MainActivity">
+    <com.arlib.floatingsearchview.FloatingSearchView
+        android:id="@+id/floating_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:floatingSearch_searchBarMarginLeft="5dp"
+        app:floatingSearch_searchBarMarginTop="5dp"
+        app:floatingSearch_searchBarMarginRight="5dp"
+        app:floatingSearch_searchHint="Search..."
+        app:floatingSearch_suggestionsListAnimDuration="250"
+        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_leftActionMode="noLeftAction"
+        app:floatingSearch_menu="@menu/menu_search_view"
+        app:floatingSearch_close_search_on_keyboard_dismiss="true" />
     <!--
        <TextView
            android:layout_width="wrap_content"
