--- a/ParkHere/app/src/main/res/layout/activity_main.xml
+++ b/ParkHere/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MainActivity">
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MainActivity"
+    android:background="@android:color/white">
     <com.arlib.floatingsearchview.FloatingSearchView
         android:id="@+id/floating_search_view"
         android:layout_width="match_parent"
