--- a/ParkHere/app/src/main/res/layout/activity_main.xml
+++ b/ParkHere/app/src/main/res/layout/activity_main.xml
@@ -4,88 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MainActivity"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MainActivity">
+
     <com.arlib.floatingsearchview.FloatingSearchView
         android:id="@+id/floating_search_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:floatingSearch_searchBarMarginLeft="5dp"
-        app:floatingSearch_searchBarMarginTop="5dp"
-        app:floatingSearch_searchBarMarginRight="5dp"
-        app:floatingSearch_searchHint="Search..."
-        app:floatingSearch_suggestionsListAnimDuration="250"
-        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_close_search_on_keyboard_dismiss="true"
         app:floatingSearch_leftActionMode="noLeftAction"
         app:floatingSearch_menu="@menu/menu_search_view"
-        app:floatingSearch_close_search_on_keyboard_dismiss="true" />
-    <!--
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="50dp"
-           android:layout_centerHorizontal="true"
-           android:textSize="40dp"
-           android:text="Park Here" />
+        app:floatingSearch_searchBarMarginLeft="5dp"
+        app:floatingSearch_searchBarMarginRight="5dp"
+        app:floatingSearch_searchBarMarginTop="5dp"
+        app:floatingSearch_searchHint="Search..."
+        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_suggestionsListAnimDuration="250" />
 
-      <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-           android:orientation="horizontal">
+    <android.support.design.widget.CoordinatorLayout
 
-           <Button
-               android:id="@+id/Parking_list"
-               android:layout_width="170dp"
-               android:layout_height="50dp"
-               android:layout_marginTop="300dp"
-               android:onClick="parkingList"
-               android:text="Available Parking" />
 
-         <Button
-               android:id="@+id/Spot_Submission"
-               android:layout_width="170dp"
-               android:layout_height="50dp"
-               android:layout_toRightOf="@+id/Parking_list"
-               android:layout_marginTop="300dp"
-               android:onClick="registerParking"
-               android:layout_marginLeft="10dp"
-               android:text="Submit a Spot" />
-       </LinearLayout> -->
-
-    <RelativeLayout
-        android:id="@+id/navigation_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <include
-            layout="@layout/activity_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-
-            />
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/floating_button_layout"
-        android:layout_alignTop="@id/navigation_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="match_parent">
+        <!--
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="50dp"
+               android:layout_centerHorizontal="true"
+               android:textSize="40dp"
+               android:text="Park Here" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/Spot_Submission"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="70dp"
-            android:layout_marginEnd="30dp"
-            android:src="@drawable/plus"
-            app:fabSize="normal" />
-    </RelativeLayout>
+          <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_centerHorizontal="true"
+               android:orientation="horizontal">
+
+               <Button
+                   android:id="@+id/Parking_list"
+                   android:layout_width="170dp"
+                   android:layout_height="50dp"
+                   android:layout_marginTop="300dp"
+                   android:onClick="parkingList"
+                   android:text="Available Parking" />
+
+             <Button
+                   android:id="@+id/Spot_Submission"
+                   android:layout_width="170dp"
+                   android:layout_height="50dp"
+                   android:layout_toRightOf="@+id/Parking_list"
+                   android:layout_marginTop="300dp"
+                   android:onClick="registerParking"
+                   android:layout_marginLeft="10dp"
+                   android:text="Submit a Spot" />
+           </LinearLayout> -->
+
+        <RelativeLayout
+            android:id="@+id/navigation_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <include
+                layout="@layout/activity_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/floating_button_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignTop="@id/navigation_layout">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/home_post_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="70dp"
+                android:scrollbars="vertical" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/Spot_Submission"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="70dp"
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/plus"
+                app:fabSize="normal" />
+        </RelativeLayout>
 
 
-
+    </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
