UI for my profile and add vehicle,

--- a/ParkHere/app/src/main/res/layout/home_post_list_item.xml
+++ b/ParkHere/app/src/main/res/layout/home_post_list_item.xml
@@ -73,7 +73,7 @@
                 android:id="@+id/post_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/ph_desciption"
+                android:text="@string/ph_description"
                 android:layout_margin="5dp"
                 android:maxLines="3"
                 android:ellipsize="end"
