--- a/ParkHere/app/src/main/res/layout/activity_notification.xml
+++ b/ParkHere/app/src/main/res/layout/activity_notification.xml
@@ -5,5 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.NotificationActivity">
+    <RelativeLayout
+        android:id="@id/navigation_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+    <include
+        layout="@layout/activity_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
