--- a/ParkHere/app/src/main/res/layout/activity_profile.xml
+++ b/ParkHere/app/src/main/res/layout/activity_profile.xml
@@ -97,4 +97,18 @@
         android:layout_marginStart="5dp"
         android:background="@color/light_gray"
         android:layout_marginBottom="10dp"/>
+
+    <RelativeLayout
+        android:id="@id/navigation_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <include
+            layout="@layout/activity_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+
+            />
+    </RelativeLayout>
 </LinearLayout>
