--- a/ParkHere/app/src/main/res/layout/activity_my_spots.xml
+++ b/ParkHere/app/src/main/res/layout/activity_my_spots.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MyPlacesActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.MySpotsActivity">
     <RelativeLayout
-        android:id="@+id/floating_button_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
@@ -16,7 +14,7 @@
         android:layout_alignTop="@id/navigation_layout">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/places_list"
+            android:id="@+id/spots_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
@@ -25,7 +23,7 @@
             android:scrollbars="vertical" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/place_add_button"
+            android:id="@+id/spot_add_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
