--- a/ParkHere/app/src/main/res/layout/activity_profile.xml
+++ b/ParkHere/app/src/main/res/layout/activity_profile.xml
@@ -97,6 +97,28 @@
         android:layout_marginStart="5dp"
         android:background="@color/light_gray"
         android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:id="@+id/logout_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="10dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/logout"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:background="@color/light_gray"
+        android:layout_marginBottom="10dp"/>
 
     <RelativeLayout
         android:id="@id/navigation_layout"
