post sumit POST done

--- a/ParkHere/app/src/main/res/values/colors.xml
+++ b/ParkHere/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="googleBackGround">#d83226</color>
     <color name="menuText">#646464</color>
+    <color name="white">#ffffff</color>
 </resources>
