--- a/ParkHere/app/src/main/res/layout/home_post_list_item.xml
+++ b/ParkHere/app/src/main/res/layout/home_post_list_item.xml
@@ -41,17 +41,40 @@
                     android:id="@+id/post_owner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/ph_owner"
+                    android:layout_margin="5dp"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:layout_margin="5dp"/>
+                    android:layout_marginEnd="10dp"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/post_date_posted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/ph_date_posted"
                     android:layout_margin="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/rating"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/total_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/five"
+                    android:layout_marginEnd="10dp"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
