--- a/ParkHere/app/src/main/res/layout/comment_view_adapter_item.xml
+++ b/ParkHere/app/src/main/res/layout/comment_view_adapter_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_marginBottom="5dp">
 
-    <TextView
+    <!--TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
         android:text="title"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold" /-->
 
     <LinearLayout
         android:layout_width="match_parent"
