--- a/ParkHere/app/src/main/res/layout/activity_booking.xml
+++ b/ParkHere/app/src/main/res/layout/activity_booking.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_booking" />
+    <include layout="@layout/content_post_information" />
 
 </android.support.design.widget.CoordinatorLayout>
