--- a/ParkHere/app/src/main/res/layout/rate_and_comment.xml
+++ b/ParkHere/app/src/main/res/layout/rate_and_comment.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:max="5"
+        android:secondaryProgressTint="#00000000"
+        android:stepSize="0.1"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"/>
 
