Revert "contains the latest version, calendar view"
This reverts commit c11a0b302625e4c01d050bfbc7e54881a810ebc6.

--- a/ParkHere/app/src/main/res/layout/activity_booking.xml
+++ b/ParkHere/app/src/main/res/layout/activity_booking.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_post_information" />
+    <include layout="@layout/content_booking" />
 
 </android.support.design.widget.CoordinatorLayout>
