--- a/ParkHere/app/src/main/res/layout/home_post_list_item.xml
+++ b/ParkHere/app/src/main/res/layout/home_post_list_item.xml
@@ -64,7 +64,6 @@
                     android:layout_marginEnd="10dp"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -85,6 +84,15 @@
                     android:id="@+id/total_rate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/five"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginStart="5dp"
