--- a/ParkHere/app/src/main/res/layout/comment_view_adapter_item.xml
+++ b/ParkHere/app/src/main/res/layout/comment_view_adapter_item.xml
@@ -28,13 +28,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/full_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="full name"
+                    android:maxLines="1"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:layout_margin="5dp"/>
@@ -46,10 +47,9 @@
                     android:text="date posted"
                     android:layout_margin="5dp"
                     android:paddingEnd="10dp"
-                    android:paddingStart="5dp"
+                    android:paddingStart="10dp"
                     android:textColor="@color/googleBackGround"
                     android:textSize="14sp"
-                    android:gravity="end"
                     />
             </LinearLayout>
 
@@ -59,7 +59,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/ph_description"
                 android:layout_margin="5dp"
-                android:maxLines="3"
+                android:maxLines="10"
                 android:ellipsize="end"
                 />
         </LinearLayout>
